# data-analysis-space-x

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  conf.py  pyproject.toml  requirements.txt
notebooks/: apply_1C_SpaceX_data_wrangling.ipynb  apply_1_SpaceX_api.ipynb  apply_2B_EDA.ipynb  apply_2_SQL.ipynb  apply_2_SpaceX_scraping.ipynb  apply_3B_plotly_dash.py  apply_3_folium_launch_site_location.ipynb  apply_4B_SpaceX_MLP.ipynb
src/: __init__.py  routes.py
src/controllers/: home.py
src/dash/: spacex.py
src/services/: dash.py
src/templates/: base.html  dash.html  index.html
src/templates/components/: footer.html  nav.html
src/utils/: util.py  version.py
