[project]
name = "da_spacex"
version = "0.0.0"
description = "Data analysis for Space X"
requires-python = ">= 3.8"
dependencies = [
    "flask[async]",
    "flask-cors",
    "matplotlib",
    "dash",
    "pandas",
    "numpy",
    "folium",
    "plotly",
    "toml"
]
authors=[
    { "name"="test", "email"="example@gmail.com" }
]
maintainers = [
    {"name" = "test", "email" = "example@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data analysis", "data visualization", "numpy", "pandas", "folium", "seaborn", "jupyter notebook"]

[project.urls]
Homepage = "https://github.com/JeanG00/data-analysis-space_x"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["server"]